<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6D983"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="621dp"
        android:background="@drawable/ic_cover"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="344dp"
            android:layout_height="191dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo3" />

        <TextView
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="32dp"
            android:text="@string/register"
            android:textColor="#000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="344dp"
            android:layout_height="52dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_field_cover"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="8dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="346dp"
            android:layout_height="49dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/ic_field_cover"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="344dp"
            android:layout_height="58dp"
            android:background="@drawable/card_background"
            android:backgroundTint="#FFCA28"
            android:padding="16dp"
            android:text="@string/register"
            android:textColor="#000"
            android:textSize="19sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/ViewLogin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fontFamily="@font/righteous"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/loginText"
            android:textColor="#66B8FA"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>